--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>狮诚优味官网-有品质的美好生活</title>
+    <title>狮诚优味</title>
     <meta name="description" content="狮诚优味专注于提供极致的精品零食消费体验，通过选品升级、包装升级、品牌升级，打造更有竞争力的网红零食产品。通过电商平台、社交团购以及大型城市食品批发市场渠道销售，实现线上/线下销售额巨大突破。未来我们还建立总部生产基地及食品研究中心，探索零食更多可能">
     <meta name="keywords" content="狮诚优味,食品,零食,高端零食,锅巴,饼干,代购,网红食品,高端礼盒,特色美食,品质生活,源头正品,东南亚特色,互联网消费体验">
     <link rel="icon" href="img/favicon.png">
@@ -558,9 +558,9 @@
                     <div class="single-footer-widget footer_2">
                         <h4>联系我们</h4>
                         <div class="contact_info">
-                            <p><span> 地址 :</span>江苏省苏州市吴江区 </p>
-                            <p><span> 电话 :</span>400-685-8082</p>
-                            <p><span> Email : </span>306204285@qq.com </p>
+                            <p><span> 地址：</span>江苏省苏州市吴江区 </p>
+                            <p><span> 电话：</span>400-685-8082</p>
+                            <p><span> Email：</span>306204285@qq.com </p>
                         </div>
                     </div>
                 </div>
