--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>狮诚优味</title>
-    <meta name="description" content="狮诚优味专注于提供极致的精品零食消费体验，通过选品升级、包装升级、品牌升级，打造更有竞争力的网红零食产品。通过电商平台、社交团购以及大型城市食品批发市场渠道销售，实现线上/线下销售额巨大突破。未来我们还建立总部生产基地及食品研究中心，探索零食更多可能">
-    <meta name="keywords" content="狮诚优味,食品,零食,高端零食,锅巴,饼干,代购,网红食品,高端礼盒,特色美食,品质生活,源头正品,东南亚特色,互联网消费体验">
+    <meta name="description" content="狮诚优味是吃小货食品有限公司旗下的休闲零食品牌，总部位于江苏苏州，主营产品包括面包糕点、谷物制品、坚果果干、方便速食等品类休闲零食，致力于提供质高、价优、新鲜、丰富的休闲零食消费体验，通过选品升级、包装升级、品牌升级，打造更有竞争力的休闲零食产品。">
+    <meta name="keywords" content="狮诚优味,食品,零食,高端零食,锅巴,饼干,代购,网红食品,高端礼盒,特色美食,品质生活,源头正品,特色零食,互联网消费体验,三只松鼠,良品铺子,百草味,好想来,零食很忙,赵一鸣,量贩零食">
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -37,7 +37,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo" style="width: 212px;"></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/L2025.png" alt="logo" style="width: 212px;"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
