--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"><img src="img/Logo2025.png" alt="logo" style="width: 168px;"></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/Logo2025.png" alt="logo" style="width: 128px;"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +77,7 @@
                 <div class="col-lg-6">
                     <div class="banner_text">
                         <div class="banner_text_iner">
-                            <h5>一起迈向美好生活</h5>
+                           <!-- <h5>一起迈向美好生活</h5> -->
                             <h1>创新求变，实现健康可持续的高质量发展</h1>
                             <p>狮诚优味是吃小货食品有限公司旗下的休闲零食品牌，总部位于江苏苏州，主营产品包括面包糕点、谷物制品、坚果果干、方便速食等品类休闲零食，致力于提供质高、价优、新鲜、丰富的休闲零食消费体验，通过选品升级、包装升级、品牌升级，打造更有竞争力的休闲零食产品。<br>
 依托品牌、产品及服务优势，通过社交平台、直播电商、团购等线上板块同步发力，线下休闲食品批发市场渠道销售，构建全渠道营销模式，贯穿线上、线下的全渠道、立体化销售体系，给消费者提供真正适合他们的零食推荐。通过强化研发创新，重塑品牌、渠道、产品及消费者体验，逐步向健康化、数字化。
