--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <p>狮诚优味是吃小货食品有限公司旗下的休闲零食品牌，总部位于江苏苏州，主营产品包括面包糕点、谷物制品、坚果果干、方便速食等品类休闲零食，致力于提供质高、价优、新鲜、丰富的休闲零食消费体验，通过选品升级、包装升级、品牌升级，打造更有竞争力的休闲零食产品。<br>
 依托品牌、产品及服务优势，通过社交平台、直播电商、团购等线上板块同步发力，线下休闲食品批发市场渠道销售，构建全渠道营销模式，贯穿线上、线下的全渠道、立体化销售体系，给消费者提供真正适合他们的零食推荐。通过强化研发创新，重塑品牌、渠道、产品及消费者体验，逐步向健康化、数字化。
                             </p>
-                            <h3>全国服务热线：400-685-8082</h3>
+                            <h3>消费者服务热线：400-685-8082</h3>
                        <!--      <div class="banner_btn">
                                 <div class="banner_btn_iner">
                                     <a href="#" class="btn_2">Reservation <img src="img/icon/left_1.svg" alt=""></a>
